<resources>
    <string name="app_name">MainApp</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="mfr_text">Hai</string>
    <string name="Name_Text">Name</string>
    <string name="welcome_text">CAR APP</string>
    <string name="quote_text_heading">Quotes By Ron Swanson</string>
    <string name="Back_image_description">Back button"</string>
    <string name="mfr_name">Mfr_Name</string>
    <string name="common_name">Common Name</string>
    <string name="mfr_id">Mfr_Id</string>
    <string name="country">Country</string>
    <string name="car_details">CAR DETAILS</string>
    <string name="vehicle_type">Vehicle Types</string>
    <string name="description">Description</string>
    <string name="mfr_id1">Mfr_ID</string>
    <string name="country_text">Country</string>
    <string name="common_name_text">Common Name</string>
    <string name="splash_screen_background">splash screen background</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="country_title">COUNTRY</string>
    <string name="key">country</string>
    <string name="list_fragment_keyword">list_fragment</string>
    <string name="list2_fragment_keyword">list2_fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_text">GO</string>
    <string name="login_header">LOGIN</string>
    <string name="id">Id</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="person_details">MY PROFILE</string>
    <string name="home_screen">HOME SCREEN</string>
    <string name="back">Back</string>

</resources>