<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/titlr_clr"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/playball_regular"
            android:text="@string/car_details"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/Country"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/country"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Mfr_Name"
         />
    <TextView
        android:id="@+id/Mfr_CommonName"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/common_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Country"
        app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
        android:id="@+id/Mfr_Name"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/mfr_name"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_mediumitalic"
        android:layout_marginTop="@dimen/spacing_112dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
        android:id="@+id/Mfr_ID"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/mfr_id"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Mfr_CommonName"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/Mfr_Name3"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/vehicle_type"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/Mfr_ID"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
        android:id="@+id/Mfr_CommonName1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/description"
        android:textStyle="bold"
        android:text=""
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_mediumitalic"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Country1"
         />
    <TextView
        android:id="@+id/Mfr_ID1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/mfr_id1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text=""
        android:textSize="13sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Mfr_CommonName1"
         />

    <TextView
        android:id="@+id/Country1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:textColor="@color/white"
        android:hint="@string/country_text"
        android:fontFamily="@font/poppins_mediumitalic"
        android:textStyle="bold"
        android:text=""
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Mfr_Name1" />
    <TextView
        android:id="@+id/Mfr_Name1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/common_name_text"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_mediumitalic"
        android:layout_marginTop="@dimen/spacing_112dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/Mfr_ID1"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView2"
            android:layout_width="240dp"
            android:layout_height="50dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />
    </LinearLayout>

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>