<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment2">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="308dp">
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/car_details"
            android:fontFamily="@font/playball_regular"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/Country"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/country"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Mfr_Name"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="377dp" />
    <TextView
        android:id="@+id/Mfr_CommonName"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/common_name"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Country"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="438dp" />
    <TextView
        android:id="@+id/Mfr_Name"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/mfr_name"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="438dp" />
    <TextView
        android:id="@+id/Mfr_ID"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/mfr_id"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Mfr_CommonName"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/Mfr_Name3"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/vehicle_type"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/Mfr_ID"
        android:fontFamily="@font/poppins_mediumitalic"
        android:layout_marginBottom="320dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="555dp" />
    <TextView
        android:id="@+id/Mfr_CommonName1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/description"
        android:textStyle="bold"
        android:text=""
        android:fontFamily="@font/poppins_mediumitalic"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Country1"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="410dp" />
    <TextView
        android:id="@+id/Mfr_ID1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/mfr_id1"
        android:textStyle="bold"
        android:text=""
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        tools:layout_editor_absoluteX="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Mfr_CommonName1"
        tools:layout_editor_absoluteY="515dp" />
    <TextView
        android:id="@+id/Mfr_Name2"
        android:layout_width="266dp"
        android:layout_height="20dp"
        android:layout_marginBottom="320dp"
        android:text=""
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/Country1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/country_text"
        android:fontFamily="@font/poppins_mediumitalic"
        android:textStyle="bold"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Mfr_Name1"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="320dp" />
    <TextView
        android:id="@+id/Mfr_Name1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/common_name_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/Mfr_ID1"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView2"
            android:layout_width="240dp"
            android:layout_height="50dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>