<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/login_new"
    tools:context=".LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/spacing_16dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/login_clr"
            android:padding="36dp">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/spacing_8dp"
                android:text="@string/login_header"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/username"
                android:minHeight="48dp"
                android:padding="@dimen/spacing_8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:minHeight="48dp"
                android:padding="@dimen/spacing_8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>