<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilescreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/titlr_clr"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black"
        >
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/person_details"
            android:fontFamily="@font/playball_regular"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/Username"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/username"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Id"
        />
    <TextView
        android:id="@+id/Email"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintTop_toBottomOf="@id/Username"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/Id"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/id"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_mediumitalic"
        android:layout_marginTop="@dimen/spacing_248dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/FirstName"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:fontFamily="@font/poppins_mediumitalic"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email" />

    <TextView
        android:id="@+id/LastName"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/last_name"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/FirstName"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/Gender"
        android:layout_width="133dp"
        android:layout_height="20dp"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="@dimen/spacing_8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/LastName"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/Email1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/email"
        android:textStyle="bold"
        android:text=""
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_mediumitalic"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Username1"
        />
    <TextView
        android:id="@+id/FirstName1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/first_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text=""
        android:textSize="13sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email1"
        />
    <TextView
        android:id="@+id/LastName1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/last_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text=""
        android:textSize="13sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FirstName1"
        />
    <TextView
        android:id="@+id/Gender1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:hint="@string/gender"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text=""
        android:textSize="13sp"
        android:fontFamily="@font/poppins_mediumitalic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LastName1"
        />

    <TextView
        android:id="@+id/Username1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:textColor="@color/black"
        android:hint="@string/country_text"
        android:fontFamily="@font/poppins_mediumitalic"
        android:textStyle="bold"
        android:text=""
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Id1" />

    <TextView
        android:id="@+id/Id1"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/spacing_248dp"
        android:fontFamily="@font/poppins_mediumitalic"
        android:hint="@string/id"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/Gender1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/Username2"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="@dimen/spacing_48dp"
        android:fontFamily="@font/poppins_mediumitalic"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/Gender1"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />
</androidx.constraintlayout.widget.ConstraintLayout>
